--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,5 +1,87 @@
-<navbar></navbar>
+<div layout="row" >
+  <div flex="30" hide-sm hide-xs>
+  </div>
+</div>
+<div layout="row" >
+  <div flex hide-sm hide-xs>
+  </div>
+  <div flex="60" >
+    <div class="form-module">
+      <div class="toggle">
+        <a class="btn btn-default btn-lg" ui-sref="main">
+          <ng-md-icon icon="clear"></ng-md-icon>
+        </a>
+        <a class="btn btn-default btn-lg" ui-sref="signup">
+          <ng-md-icon icon="facebook"></ng-md-icon>
+        </a>
+        <a class="btn btn-default btn-lg " ui-sref="login">
+          <ng-md-icon icon="twitter"></ng-md-icon>
+        </a>
+        <a class="btn btn-default btn-lg " ui-sref="signup">
+          <ng-md-icon icon="person_add"></ng-md-icon>
+        </a>
 
+        <div class="tooltip" >Sign up</div>
+      </div>
+
+      <form name="form" ng-submit="vm.login(form)">
+
+        <h2>Login</h2>
+
+        <md-input-container class="md-block" flex-gt-sm="">
+          <label>Email</label>
+          <input type="email" name="email" class="form-control" ng-model="vm.user.email"
+                 required >
+          <div ng-messages="form.email.$error">
+            <div ng-message="required">
+              Please enter a valid e-mail.
+            </div>
+            <div ng-message="mongoose">
+              {{vm.errors.password}}
+            </div>
+          </div>
+
+        </md-input-container>
+
+        <md-input-container class="md-block" flex-gt-sm="">
+          <label>Password</label>
+          <input type="password" name="password" class="form-control" ng-model="vm.user.password"
+                 required/>
+          <div ng-messages="form.password.$error">
+            <div ng-message="required">
+              Password is required
+            </div>
+
+          </div>
+        </md-input-container>
+
+        <p class="help-block">{{ vm.errors.other }}</p>
+
+        <div>
+          <button class="btn btn-inverse btn-lg btn-register" type="submit">
+            Login
+          </button>
+
+        </div>
+
+        <hr/>
+        <div class="row">
+          <div class="col-sm-4 col-md-3">
+            <oauth-buttons classes="btn-block"></oauth-buttons>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div flex hide-sm hide-xs>
+
+  </div>
+</div>
+
+
+
+
+<!--
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
@@ -53,3 +135,4 @@
   </div>
   <hr>
 </div>
+-->
