--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,1 +1,7 @@
-<navbar></navbar>
+<div >
+  <h1 id="main-title"><span>The Cha-Chat</span>
+    <br>
+    <a ui-sref="login"><ng-md-icon icon="perm_identity"></ng-md-icon></a>
+    <a ui-sref="signup"><ng-md-icon icon="person_add"></ng-md-icon></a>
+  </h1>
+</div>
