--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,88 +1,119 @@
-<navbar></navbar>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Sign up</h1>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="vm.register(form)" novalidate>
-
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && vm.submitted,
-                                            'has-error': form.name.$invalid && vm.submitted }">
-          <label>Name</label>
-
-          <input type="text" name="name" class="form-control" ng-model="vm.user.name"
-                 required/>
-          <p class="help-block" ng-show="form.name.$error.required && vm.submitted">
-            A name is required
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && vm.submitted,
-                                            'has-error': form.email.$invalid && vm.submitted }">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email"
-                 required
-                 mongoose-error/>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-            Doesn't look like a valid email.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.required && vm.submitted">
-            What's your email address?
-          </p>
-          <p class="help-block" ng-show="form.email.$error.mongoose">
-            {{ vm.errors.email }}
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && vm.submitted,
-                                            'has-error': form.password.$invalid && vm.submitted }">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password"
-                 ng-minlength="3"
-                 required
-                 mongoose-error/>
-          <p class="help-block"
-             ng-show="(form.password.$error.minlength || form.password.$error.required) && vm.submitted">
-            Password must be at least 3 characters.
-          </p>
-          <p class="help-block" ng-show="form.password.$error.mongoose">
-            {{ vm.errors.password }}
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.confirmPassword.$valid && vm.submitted,
-                                            'has-error': form.confirmPassword.$invalid && vm.submitted }">
-          <label>Confirm Password</label>
-          <input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"
-                 match="vm.user.password"
-                 ng-minlength="3" required/>
-          <p class="help-block"
-             ng-show="form.confirmPassword.$error.match && vm.submitted">
-            Passwords must match.
-          </p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">
-            Sign up
-          </button>
-          <a class="btn btn-default btn-lg btn-login" ui-sref="login">
-            Login
-          </a>
-        </div>
-
-        <hr/>
-        <div class="row">
-          <div class="col-sm-4 col-md-3">
-            <oauth-buttons classes="btn-block"></oauth-buttons>
-          </div>
-        </div>
-      </form>
-    </div>
+<div layout="row" >
+  <div flex="30" hide-sm hide-xs>
   </div>
-  <hr>
 </div>
+<div layout="row" >
+  <div flex hide-sm hide-xs>
+  </div>
+    <div flex="60" >
+      <div class="form-module">
+        <div class="toggle">
+          <a class="btn btn-default btn-lg" ui-sref="main">
+            <ng-md-icon icon="clear"></ng-md-icon>
+          </a>
+          <a class="btn btn-default btn-lg btn-login" ui-sref="login">
+            <ng-md-icon icon="facebook"></ng-md-icon>
+          </a>
+          <a class="btn btn-default btn-lg btn-login" ui-sref="login">
+            <ng-md-icon icon="twitter"></ng-md-icon>
+          </a>
+          <a class="btn btn-default btn-lg btn-login" ui-sref="login">
+            <ng-md-icon icon="perm_identity"></ng-md-icon>
+          </a>
+
+          <div class="tooltip" >Login</div>
+        </div>
+
+        <form name="form" ng-submit="vm.register(form)">
+
+          <h2>Sign up</h2>
+            <md-input-container class="md-block" flex-gt-sm="">
+            <label>Name</label>
+            <input type="text" name="name" class="form-control" ng-model="vm.user.name"
+                   required/>
+            <div ng-messages="form.name.$error">
+              <div ng-message="required">Name is required.</div>
+            </div>
+            </md-input-container>
+
+
+
+            <md-input-container class="md-block" flex-gt-sm="">
+              <label>Email</label>
+              <input type="email" name="email" class="form-control" ng-model="vm.user.email"
+                     required  minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/"
+                     mongoose-error/>
+              <div ng-messages="form.email.$error">
+                <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
+                  Your email must be between 10 and 100 characters long and look like an e-mail address.
+                </div>
+                <div ng-message="mongoose">
+                  {{vm.errors.password}}
+                </div>
+              </div>
+
+            </md-input-container>
+
+
+
+
+            <md-input-container class="md-block" flex-gt-sm="">
+              <label>Password</label>
+              <input type="password" name="password" class="form-control" ng-model="vm.user.password"
+                     ng-minlength="8"
+                     required
+                     mongoose-error/>
+              <div ng-messages="form.password.$error">
+                <div ng-message="required">
+                  Password is required
+                </div>
+                <div ng-message="minlength">
+                  Password must be at least 8 characters
+                </div>
+                <div ng-message="mongoose">
+                  {{vm.errors.password}}
+                </div>
+              </div>
+
+            </md-input-container>
+
+
+            <md-input-container class="md-block" flex-gt-sm="">
+              <label>Confirm Password</label>
+              <input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"
+                     match="vm.user.password"
+                     ng-minlength="8" required/>
+              <div ng-messages="form.confirmPassword.$error">
+                <div ng-message="required">
+                  Password is required
+                </div>
+                <div ng-message="minlength">
+                  Password must be at least 8 characters
+                </div>
+                <div ng-message="match">
+                  Passwords must match.
+                </div>
+              </div>
+            </md-input-container>
+
+
+          <div>
+            <button class="btn btn-inverse btn-lg btn-register" type="submit">
+              Sign up
+            </button>
+
+          </div>
+
+          <hr/>
+          <div class="row">
+            <div class="col-sm-4 col-md-3">
+              <oauth-buttons classes="btn-block"></oauth-buttons>
+            </div>
+          </div>
+        </form>
+  </div>
+  </div>
+  <div flex hide-sm hide-xs>
+
+  </div>
+  </div>
