separate user view

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,9 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/chat/chat.css">
+      <link rel="stylesheet" href="app/chat/contacts/contacts.css">
+      <link rel="stylesheet" href="app/chat/information/information.css">
+      <link rel="stylesheet" href="app/chat/messages/messages.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
@@ -77,17 +80,23 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/auth.service.js"></script>
+      <script src="app/main/main.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/chat/chat.controller.js"></script>
       <script src="app/chat/chat.js"></script>
-      <script src="app/main/main.controller.js"></script>
+      <script src="app/chat/contacts/contacts.controller.js"></script>
+      <script src="app/chat/contacts/contacts.js"></script>
+      <script src="app/chat/information/information.controller.js"></script>
+      <script src="app/chat/information/information.js"></script>
+      <script src="app/chat/messages/messages.controller.js"></script>
+      <script src="app/chat/messages/messages.js"></script>
+      <script src="app/account/login/login.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
-      <script src="app/account/login/login.controller.js"></script>
+      <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
