--- a/client/app/chat/chat.html
+++ b/client/app/chat/chat.html
@@ -1,23 +1,13 @@
 <navbar></navbar>
 <div layout="row" >
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-        <div layout="row" ui-view="contacts">
-          Contacts
-        </div>
+    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" ui-view="contacts">
+
     </md-sidenav>
-  <md-content  flex layout="column" class="md-whiteframe-z2">
-    <div  class="messages" >Messages</div>
-    <div  class="input md-whiteframe-z2" >
-      <form>
-        <input type="text">
-        <button class="btn btn-inverse btn-lg btn-register" type="submit">
-          SEND
-        </button>
-      </form>
-    </div>
+  <md-content  flex layout="column" class="md-whiteframe-z2" ui-view="messages">
+
   </md-content>
-  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="right" md-is-locked-open="$mdMedia('gt-sm')">
-      User Info
+  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="right" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
+
   </md-sidenav>
 
 
