--- a/client/app/chat/chat.html
+++ b/client/app/chat/chat.html
@@ -1,14 +1,22 @@
 <navbar></navbar>
 <div layout="row" >
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" ui-view="contacts">
+
+    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="contacts" md-is-locked-open="$mdMedia('gt-xs')" ui-view="contacts">
 
     </md-sidenav>
-  <md-content  flex layout="column" class="md-whiteframe-z2" ui-view="messages">
+  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="addContact" ui-view="addContact">
 
-  </md-content>
-  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="right" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
+  </md-sidenav>
+  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="addGroup" ui-view="addGroup">
 
   </md-sidenav>
 
+  <md-content  flex layout="column" class="md-whiteframe-z2" ui-view="messages">
 
+  </md-content>
+  <md-sidenav layout="column" class="md-sidenav-right md-whiteframe-z2" md-component-id="information" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
+
+  </md-sidenav>
 </div>
+
+
