--- a/client/app/chat/information/information.html
+++ b/client/app/chat/information/information.html
@@ -1,1 +1,10 @@
-<h4 class="title-bar">User Information</h4>
+<h4 class="title-bar" ng-hide="selection.name">User Information</h4>
+<h4 class="title-bar" ng-show="selection.name">{{selection.name}}</h4>
+<image  ng-src="{{selection.img }}"  class="user-photo"></image>
+<div class="outer-info">
+  <p>Name: <span>{{selection.name}}</span> </p>
+  <p>e-mail: <span>{{selection.mail}}</span> </p>
+  <p>about: <span>{{selection.mail}}</span> </p>
+  <p>status: <span>{{selection.mail}}</span> </p>
+</div>
+
