--- a/client/app/chat/messages/messages.html
+++ b/client/app/chat/messages/messages.html
@@ -12,7 +12,7 @@
         <h4 >{{selection.name}} </h4>
       </div>
   </div>
-  <repeat-messages messages="messages"></repeat-messages>
+  <repeat-messages messages="messages" user-id="currentUser._id" group="selection.kind"></repeat-messages>
 
 </div>
 <div  class="input md-whiteframe-z2" >
