--- a/client/app/chat/addUser/addUser.html
+++ b/client/app/chat/addUser/addUser.html
@@ -6,7 +6,7 @@
     <button type="submit" class="search-icon"><ng-md-icon class="search-icon" icon="search"  ></ng-md-icon></button>
   </div>
   <p class="help-block">{{ ac.errors.other }}</p>
-  <p class="answer-block">{{ ac.answer.other }}</p>
+  <p class="answer-block" ng-if="!ac.errors.other">{{ ac.answer.other }}</p>
 </form>
   <div class="outer-info">
     <md-list>
