--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -1,10 +1,11 @@
 
 <h4 class="title-bar">Friend List  <ng-md-icon icon="person_add" aria-label="Add User"  class="floater-right" ng-click="toggleAddContact()"></ng-md-icon></h4>
 <md-list>
-  <md-list-item ng-repeat="person in people" ng-click="goToPerson(person.name, $event)">
-    <img alt="{{ person.name }}" ng-src="{{ person.img }}" class="md-avatar" />
-    <p>{{person.name}}</p>
-    <ng-md-icon icon="messenger" ng-click="selectUser(person)" aria-label="Open Chat"  ng-class="{'md-primary': person.newMessage}"></ng-md-icon>
+  <md-list-item ng-repeat="room in rooms" ng-click="goToPerson(room.name, $event)">
+    <img alt="{{ room.members[0].name }}" ng-src="{{ room.members[0].img }}" class="md-avatar" />
+    <p>{{room.members[0].name}}</p>
+
+    <ng-md-icon icon="messenger" ng-click="selectUser(room)" aria-label="Open Chat"  ng-class="{'md-primary': room.newMessage}"></ng-md-icon>
   </md-list-item>
 </md-list>
 <h4 class="title-bar">Group List  <ng-md-icon icon="group_add" aria-label="Add User"  class="floater-right" ng-click="toggleAddGroup()"></ng-md-icon></h4>
@@ -12,7 +13,7 @@
   <md-list-item ng-repeat="group in groups" ng-click="goToPerson(group.name, $event)">
     <img alt="{{group.name }}" ng-src="{{ group.img }}" class="md-avatar" />
     <p>{{group.name}}</p>
-    <ng-md-icon icon="messenger" ng-click="doSecondaryAction($event)" aria-label="Open Chat"  ng-class="{'md-primary':group.newMessage}"></ng-md-icon>
+    <ng-md-icon icon="messenger" ng-click="selectUser(group)" aria-label="Open Chat"  ng-class="{'md-primary':group.newMessage}"></ng-md-icon>
   </md-list-item>
 </md-list>
 <md-divider></md-divider>
