--- a/client/app/chat/information/information.html
+++ b/client/app/chat/information/information.html
@@ -1,10 +1,19 @@
 <h4 class="title-bar" ng-hide="selection.name">User Information</h4>
 <h4 class="title-bar" ng-show="selection.name">{{selection.name}}</h4>
 <image  ng-src="{{selection.img }}"  class="user-photo"></image>
-<div class="outer-info">
+<div class="outer-info" ng-if="!selection.members">
   <p>Name: <span>{{selection.name}}</span> </p>
-  <p>e-mail: <span>{{selection.mail}}</span> </p>
-  <p>about: <span>{{selection.mail}}</span> </p>
-  <p>status: <span>{{selection.mail}}</span> </p>
+  <p>e-mail: <span>{{selection.email}}</span> </p>
+<p>status: <span>{{selection.status}}</span> </p>
+
+    <button class="btn btn-inverse btn-lg btn-register" ng-click="deleteFriend()">
+      Erase Friend
+    </button>
+
+</div>
+<div class="outer-info" ng-if="selection.members" ng-repeat="member in selection.members">
+  <p>Name: <span>{{member.name}}</span> </p>
+  <p>e-mail: <span>{{member.email}}</span> </p>
+  <p>status: <span>{{member.status}}</span> </p>
 </div>
 
