--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -1,11 +1,10 @@
 
 <h4 class="title-bar">Friend List  <ng-md-icon icon="person_add" aria-label="Add User"  class="floater-right" ng-click="toggleAddContact()"></ng-md-icon></h4>
 <md-list>
-  <md-list-item ng-repeat="room in rooms" ng-click="goToPerson(room.name, $event)">
+  <md-list-item ng-repeat="room in rooms" ng-click="goToPerson(room.name, $event)" ng-class="{'user-offline':room.members[0].status=='Offline','user-online':room.members[0].status=='Online'}">
     <img alt="{{ room.members[0].name }}" ng-src="{{ room.members[0].img }}" class="md-avatar" />
     <p>{{room.members[0].name}}</p>
-
-    <ng-md-icon icon="messenger" ng-click="selectUser(room)" aria-label="Open Chat"  ng-class="{'md-primary': room.newMessage}"></ng-md-icon>
+    <ng-md-icon icon="messenger" ng-click="selectUser(room,$index)" aria-label="Open Chat"  ng-class="{'md-primary':!room.newMessage,'md-alert':room.newMessage}"></ng-md-icon>
   </md-list-item>
 </md-list>
 <h4 class="title-bar">Group List  <ng-md-icon icon="group_add" aria-label="Add User"  class="floater-right" ng-click="toggleAddGroup()"></ng-md-icon></h4>
@@ -13,7 +12,7 @@
   <md-list-item ng-repeat="group in groups" ng-click="goToPerson(group.name, $event)">
     <img alt="{{group.name }}" ng-src="{{ group.img }}" class="md-avatar" />
     <p>{{group.name}}</p>
-    <ng-md-icon icon="messenger" ng-click="selectUser(group)" aria-label="Open Chat"  ng-class="{'md-primary':group.newMessage}"></ng-md-icon>
+    <ng-md-icon icon="messenger" ng-click="selectUser(group,$index)" aria-label="Open Chat"  ng-class="{'md-primary':!group.newMessage,'md-alert':group.newMessage}"></ng-md-icon>
   </md-list-item>
 </md-list>
 <md-divider></md-divider>
