--- a/client/app/chat/chat.html
+++ b/client/app/chat/chat.html
@@ -11,10 +11,10 @@
 
   </md-sidenav>
 
-  <md-content  flex layout="column" class="md-whiteframe-z2" ui-view="messages">
+  <md-content  flex layout="column" class="md-whiteframe-z2 " ui-view="messages">
 
   </md-content>
-  <md-sidenav layout="column" class="md-sidenav-right md-whiteframe-z2" md-component-id="information" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
+  <md-sidenav layout="column" class="md-sidenav-right md-whiteframe-z2 information" md-component-id="information" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
 
   </md-sidenav>
 </div>
