--- a/client/index.html
+++ b/client/index.html
@@ -83,7 +83,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/main/main.controller.js"></script>
+      <script src="app/main/main.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -100,15 +100,17 @@
       <script src="app/chat/information/information.js"></script>
       <script src="app/chat/messages/messages.controller.js"></script>
       <script src="app/chat/messages/messages.js"></script>
+      <script src="app/main/main.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
-      <script src="app/main/main.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
+      <script src="components/chat/chat.service.js"></script>
       <script src="components/communication/communication.service.js"></script>
       <script src="components/communication/room/room.service.js"></script>
+      <script src="components/eventNotify/eventNotify.service.js"></script>
       <script src="components/footer/footer.directive.js"></script>
       <script src="components/messages/messages.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
