--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,8 @@
       <link rel="stylesheet" href="app/chat/information/information.css">
       <link rel="stylesheet" href="app/chat/messages/messages.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="components/canvasDrawing/canvasDrawing.css">
+      <link rel="stylesheet" href="components/colorPicker/colorPicker.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
       <link rel="stylesheet" href="components/oauth-buttons/oauth-buttons.css">
@@ -83,7 +85,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/main/main.js"></script>
+      <script src="components/auth/auth.service.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -101,17 +103,23 @@
       <script src="app/chat/messages/messages.controller.js"></script>
       <script src="app/chat/messages/messages.js"></script>
       <script src="app/main/main.controller.js"></script>
-      <script src="app/account/login/login.controller.js"></script>
+      <script src="app/main/main.js"></script>
+      <script src="components/addUsersToGroup/addUsersToGroup.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
-      <script src="components/auth/auth.service.js"></script>
+      <script src="app/account/login/login.controller.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
+      <script src="components/canvasDrawing/canvasDrawing.directive.js"></script>
       <script src="components/chat/chat.service.js"></script>
+      <script src="components/colorPicker/colorPicker.directive.js"></script>
       <script src="components/communication/communication.service.js"></script>
       <script src="components/communication/room/room.service.js"></script>
       <script src="components/eventNotify/eventNotify.service.js"></script>
       <script src="components/footer/footer.directive.js"></script>
+      <script src="components/loadDrawing/ctxDraw/ctxDraw.directive.js"></script>
+      <script src="components/loadDrawing/loadDrawing.controller.js"></script>
+      <script src="components/loadDrawing/loadDrawing.directive.js"></script>
       <script src="components/messages/messages.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
