--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -1,5 +1,6 @@
 
 <h4 class="title-bar">Friend List  <ng-md-icon icon="person_add" aria-label="Add User"  class="floater-right" ng-click="toggleAddContact()"></ng-md-icon></h4>
+<md-content flex>
 <md-list>
   <md-list-item ng-repeat="room in rooms" ng-click="goToPerson(room.name, $event)" ng-class="{'user-offline':room.members[0].status=='Offline','user-online':room.members[0].status=='Online'}">
     <img alt="{{ room.members[0].name }}" ng-src="{{ room.members[0].img }}" class="md-avatar" />
@@ -7,12 +8,15 @@
     <ng-md-icon icon="messenger" ng-click="selectUser('par',$index)" aria-label="Open Chat"  ng-class="{'md-primary':!room.newMessage,'md-alert':room.newMessage}"></ng-md-icon>
   </md-list-item>
 </md-list>
+</md-content>
 <h4 class="title-bar">Group List  <ng-md-icon icon="group_add" aria-label="Add User"  class="floater-right" ng-click="toggleAddGroup()"></ng-md-icon></h4>
-<md-list>
-  <md-list-item ng-repeat="group in groups" ng-click="goToPerson(group.name, $event)">
-    <img alt="{{group.name }}" ng-src="{{ group.img }}" class="md-avatar" />
-    <p>{{group.name}}</p>
-    <ng-md-icon icon="messenger" ng-click="selectUser('group',$index)" aria-label="Open Chat"  ng-class="{'md-primary':!group.newMessage,'md-alert':group.newMessage}"></ng-md-icon>
-  </md-list-item>
-</md-list>
+<md-content flex>
+  <md-list>
+    <md-list-item ng-repeat="group in groups" ng-click="goToPerson(group.name, $event)">
+      <img alt="{{group.name }}" ng-src="{{ group.img }}" class="md-avatar" />
+      <p>{{group.name}}</p>
+      <ng-md-icon icon="messenger" ng-click="selectUser('group',$index)" aria-label="Open Chat"  ng-class="{'md-primary':!group.newMessage,'md-alert':group.newMessage}"></ng-md-icon>
+    </md-list-item>
+  </md-list>
+</md-content>
 <md-divider></md-divider>
