--- a/client/app/chat/messages/messages.html
+++ b/client/app/chat/messages/messages.html
@@ -26,11 +26,38 @@
 <md-content class="welcome-message" ng-if="MessCtrl.selection==null">
   <p>The Cha-Chat</p>
 </md-content>
+
 <div ng-if="MessCtrl.selection!=null">
-  <div  class="input md-whiteframe-z2" >
-    <form ng-submit="MessCtrl.addMessage()">
-      <input type="text" ng-model="MessCtrl.sendText">
-      <md-button aria-label="send" type="submit" >SEND</md-button>
-    </form>
-  </div>
+
+  <md-divider></md-divider>
+  <md-tabs md-dynamic-height md-border-bottom>
+    <md-tab>
+      <md-tab-label>
+        <ng-md-icon  icon="keyboard">
+        </ng-md-icon>
+      </md-tab-label>
+      <md-tab-body>
+        <md-content class="md-padding">
+          <div  class="input" >
+            <form ng-submit="MessCtrl.addMessage()">
+              <input type="text" ng-model="MessCtrl.sendText">
+              <md-button aria-label="send" type="submit" >SEND</md-button>
+            </form>
+          </div>
+         </md-content>
+      </md-tab-body>
+    </md-tab>
+    <md-tab>
+      <md-tab-label>
+        <ng-md-icon  icon="edit" >
+        </ng-md-icon>
+      </md-tab-label>
+      <md-tab-body>
+        <div>
+          <canvas-drawing send-canvas="MessCtrl.sendCanvas"></canvas-drawing>
+
+         </div>
+      </md-tab-body>
+    </md-tab>
+  </md-tabs>
 </div>
