--- a/client/app/chat/addGroup/addGroup.html
+++ b/client/app/chat/addGroup/addGroup.html
@@ -1,18 +1,17 @@
 <h4 class="title-bar" >Create New Group</h4>
-<form ng-submit="group.newGroup(groupName)">
+<form ng-submit="GCtrl.newGroup(groupName)">
   <md-input-container  >
     <label for="groupName">Group Name</label>
-    <input  id="groupName" type="text" class="search-input" ng-model="groupName">
+    <input  id="groupName" type="text" class="search-input" ng-model="GCtrl.groupName">
     <md-button type="submit">Create</md-button>
     <p class="help-block">{{ ac.errors.other }}</p>
-    <p class="answer-block" ng-if="!ac.errors.other">{{ ac.answer.other }}</p>
   </md-input-container>
 </form>
 
   <h4 class="title-bar" >Going to add</h4>
 <md-content flex>
   <md-list>
-    <md-list-item ng-repeat="person in group.rooms" ng-if="person.members[0].add">
+    <md-list-item ng-repeat="person in GCtrl.rooms" ng-if="person.members[0].add">
       <img alt="{{ person.members[0].name }}" ng-src="{{ person.members[0].img }}" class="md-avatar" />
       <p>{{person.members[0].name}}</p>
       <ng-md-icon icon="info_outline" aria-label="info"  ng-class="">
@@ -22,7 +21,7 @@
       </ng-md-icon>
       <label>
         <ng-md-icon icon="close" class="help-block" aria-label="Going to Add"  ng-class=""></ng-md-icon>
-        <input type="checkbox" ng-model="person.members[0].add" ng-show="false" ng-change="group.removeMemberId(person.members[0]._id)">
+        <input type="checkbox" ng-model="person.members[0].add" ng-show="false" ng-change="GCtrl.removeMemberId(person.members[0]._id)">
       </label>
     </md-list-item>
   </md-list>
@@ -31,7 +30,7 @@
   <h4 class="title-bar" >Not being added</h4>
 <md-content flex>
   <md-list>
-    <md-list-item ng-repeat="person in group.rooms| filter:searchText" ng-if="!person.members[0].add">
+    <md-list-item ng-repeat="person in GCtrl.rooms| filter:searchText" ng-if="!person.members[0].add">
 
       <img alt="{{ person.members[0].name }}" ng-src="{{ person.members[0].img }}" class="md-avatar" />
       <p>{{person.members[0].name}}</p>
@@ -42,7 +41,7 @@
       </ng-md-icon>
       <label>
         <ng-md-icon icon="done"class="answer-block" aria-label="Going to Skip"  ng-class=""></ng-md-icon>
-        <input type="checkbox" ng-model="person.members[0].add" ng-show="false" ng-change="group.addMemberId(person.members[0]._id)">
+        <input type="checkbox" ng-model="person.members[0].add" ng-show="false" ng-change="GCtrl.addMemberId(person.members[0]._id)">
       </label>
       <br>
     </md-list-item>
