--- a/client/app/chat/chat.html
+++ b/client/app/chat/chat.html
@@ -1,5 +1,5 @@
 <navbar></navbar>
-<div layout="row" id="chatViewPort">
+<md-content layout="row" id="chatViewPort">
 
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="contacts" md-is-locked-open="$mdMedia('gt-xs')" ui-view="contacts">
 
@@ -14,9 +14,9 @@
   <md-content  flex layout="column" class="md-whiteframe-z2 " ui-view="messages">
 
   </md-content>
-  <md-sidenav layout="column" class="md-sidenav-right md-whiteframe-z2 information" md-component-id="information" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
+  <md-sidenav layout="column" class="md-sidenav-right md-whiteframe-z2 " md-component-id="information" md-is-locked-open="$mdMedia('gt-sm')" ui-view="information">
 
   </md-sidenav>
-</div>
+</md-content>
 
 
