--- a/client/index.html
+++ b/client/index.html
@@ -127,6 +127,7 @@
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
       <script src="components/repeatMessages/repeatMessages.directive.js"></script>
+      <script src="components/sideNavToggler/sideNavToggler.service.js"></script>
       <script src="components/socket/socket.service.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
       <script src="components/util/util.service.js"></script>
