--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -8,16 +8,11 @@
   <div flex="60" >
     <div class="form-module">
       <div class="toggle">
-        <a class="btn btn-default btn-lg" ui-sref="main">
+        <a class="btn btn-default btn-lg btn-toggler" ui-sref="main">
           <ng-md-icon icon="clear"></ng-md-icon>
         </a>
-        <a class="btn btn-default btn-lg" ui-sref="signup">
-          <ng-md-icon icon="facebook"></ng-md-icon>
-        </a>
-        <a class="btn btn-default btn-lg " ui-sref="login">
-          <ng-md-icon icon="twitter"></ng-md-icon>
-        </a>
-        <a class="btn btn-default btn-lg " ui-sref="signup">
+        <oauth-buttons classes="btn-block"></oauth-buttons>
+        <a class="btn btn-default btn-lg btn-toggler " ui-sref="signup">
           <ng-md-icon icon="person_add"></ng-md-icon>
         </a>
 
@@ -65,11 +60,6 @@
         </div>
 
         <hr/>
-        <div class="row">
-          <div class="col-sm-4 col-md-3">
-            <oauth-buttons classes="btn-block"></oauth-buttons>
-          </div>
-        </div>
       </form>
     </div>
   </div>
@@ -81,58 +71,3 @@
 
 
 
-<!--
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
-        </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ vm.errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" ui-sref="signup">
-            Register
-          </a>
-        </div>
-
-        <hr/>
-        <div class="row">
-          <div class="col-sm-4 col-md-3">
-            <oauth-buttons classes="btn-block"></oauth-buttons>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-  <hr>
-</div>
--->
