--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -9,8 +9,7 @@
   </ng-md-icon>
 </h4>
 
-<md-content flex style="height:1px">
-<md-list>
+<md-list flex style="height:1px">
   <md-list-item ng-repeat="room in CCtrl.rooms | orderBy:'lastMessageDate_ms':true"
                 ng-click="CCtrl.selectUser('par',room)"
                 ng-class="{'user-offline':room.members[0].status=='Offline','user-online':room.members[0].status=='Online'}">
@@ -19,20 +18,17 @@
     <ng-md-icon icon="messenger"  aria-label="Open Chat"  ng-class="{'md-primary':!room.newMessage,'md-alert':room.newMessage}"></ng-md-icon>
   </md-list-item>
 </md-list>
-</md-content>
 
 <h4 class="title-bar">Group List
   <ng-md-icon icon="group_add" aria-label="Add User"  class="floater-right" ng-click="CCtrl.openAddGroups()">
   </ng-md-icon>
 </h4>
 
-<md-content flex style="height:1px">
-  <md-list >
+  <md-list flex style="height:1px">
     <md-list-item ng-repeat="group in CCtrl.groups | orderBy:'lastMessageDate_ms':true" ng-click="CCtrl.selectUser('group',group)">
       <img alt="{{group.name }}" ng-src="{{ group.img }}" class="md-avatar" />
       <p>{{group.name}}</p>
       <ng-md-icon icon="messenger"  aria-label="Open Chat"  ng-class="{'md-primary':!group.newMessage,'md-alert':group.newMessage}"></ng-md-icon>
     </md-list-item>
   </md-list>
-</md-content>
 <md-divider></md-divider>
