--- a/client/app/chat/information/information.html
+++ b/client/app/chat/information/information.html
@@ -1,4 +1,4 @@
-<h4 class="title-bar" ng-hide="ICtrl.selection.name">User Information</h4>
+<h4 class="title-bar md-accent" ng-hide="ICtrl.selection.name">User Information</h4>
 <md-content  class="reset  information" ng-if="ICtrl.selection" >
   <h4 class="title-bar" ng-show="ICtrl.selection.name">{{ICtrl.selection.name}}</h4>
   <image  ng-src="{{ICtrl.selection.img }}"  class="user-photo"></image>
@@ -6,7 +6,7 @@
     <p>Name: <span>{{ICtrl.selection.name}}</span> </p>
     <p>e-mail: <span>{{ICtrl.selection.email}}</span> </p>
     <p>status: <span>{{ICtrl.selection.status}}</span> </p>
-      <button class="btn btn-inverse btn-lg btn-register" ng-click="ICtrl.deleteFriend()">
+      <button class="btn btn-inverse btn-lg btn-register" ng-click="ICtrl.showConfirm('Delete Friend',ICtrl.deleteFriend)">
         Erase Friend
       </button>
   </div>
@@ -22,7 +22,7 @@
 
         <ng-md-icon ng-if="ICtrl.selection.admin==member._id" class="float-right" icon="person" ></ng-md-icon>
         <md-button class="md-icon-button">
-          <ng-md-icon ng-if="ICtrl.selection.admin==ICtrl.user._id" ng-click="ICtrl.deleteFriendFromGroup(member._id,ICtrl.selection.name)" class="float-right" icon="cancel" ></ng-md-icon>
+          <ng-md-icon ng-if="ICtrl.selection.admin==ICtrl.user._id" ng-click="ICtrl.showConfirm('Kick From group',ICtrl.deleteFriendFromGroup,member._id,ICtrl.selection.name)" class="float-right" icon="cancel" ></ng-md-icon>
         </md-button>
       </md-list-item>
     </md-list>
@@ -31,10 +31,10 @@
   <button  class="btn-green" ng-click="ICtrl.showDialog()" ng-if="ICtrl.selection.admin==ICtrl.user._id">
     Add Friend
   </button>
-  <button  ng-click="ICtrl.deleteGroup()" ng-if="ICtrl.selection.admin==ICtrl.user._id">
+  <button  ng-click="ICtrl.showConfirm('Delete Group',ICtrl.deleteGroup)" ng-if="ICtrl.selection.admin==ICtrl.user._id">
     Delete Group
   </button>
-  <button class="btn-red" ng-click="ICtrl.exitGroup(ICtrl.selection.name)">
+  <button class="btn-red" ng-click="ICtrl.showConfirm('Exit Group',ICtrl.exitGroup,ICtrl.selection.name)">
     Exit
   </button>
 </md-content>
