--- a/client/app/chat/messages/messages.html
+++ b/client/app/chat/messages/messages.html
@@ -22,7 +22,9 @@
 <repeat-messages  ng-if="MessCtrl.selection!=null" messages="MessCtrl.messages" user-id="MessCtrl.currentUser._id" group="MessCtrl.selection.kind"></repeat-messages>
 
 <md-content flex class="welcome-message" ng-if="MessCtrl.selection==null">
-  <p>The Cha-Chat</p>
+  <div>
+    <p>The Cha-Chat</p>
+  </div>
 </md-content>
 
 <div ng-if="MessCtrl.selection!=null">
