--- a/client/index.html
+++ b/client/index.html
@@ -85,7 +85,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/auth.service.js"></script>
+      <script src="components/auth/interceptor.service.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -106,8 +106,8 @@
       <script src="app/main/main.js"></script>
       <script src="components/addUsersToGroup/addUsersToGroup.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
+      <script src="components/auth/auth.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
-      <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
       <script src="components/canvasDrawing/canvasDrawing.directive.js"></script>
@@ -127,6 +127,7 @@
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
       <script src="components/repeatMessages/repeatMessages.directive.js"></script>
+      <script src="components/scrollTop/scrollTop.directive.js"></script>
       <script src="components/sideNavToggler/sideNavToggler.service.js"></script>
       <script src="components/socket/socket.service.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
