force grunt to use port 80 testing

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
     <title></title>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -56,8 +58,7 @@
       ga('create', 'UA-XXXXX-X');
       ga('send', 'pageview');
     </script>
-
-    <!--[if lt IE 9]>
+   <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
